force-app/main/default/objects/General_Settings__c/General_Settings__c.object-meta.xml
<CustomObject>
    <label>Templates</label>
    <nameField>
        <label>General Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>