force-app/main/default/objects/General_Settings__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welcome Email Template</fullName>
            </value>
            <value>
                <fullName>Demand Note</fullName>
            </value>
            <value>
                <fullName>Payment Receipt</fullName>
            </value>
            <value>
                <fullName>Demand_3RD_REMINDER</fullName>
            </value>
            <value>
                <fullName>Demand_2ND_REMINDER</fullName>
            </value>
            <value>
                <fullName>Demand_1ST_REMINDER</fullName>
            </value>
            <value>
                <fullName>Terms and Conditions</fullName>
            </value>
            <value>
                <fullName>Agreement Remainder</fullName>
            </value>
            <value>
                <fullName>Cancellation Mail Template</fullName>
            </value>
            <value>
                <fullName>PSR Mail Template</fullName>
            </value>
            <value>
                <fullName>Revised Demand Note</fullName>
            </value>
            <value>
                <fullName>Unit Readiness Mail</fullName>
            </value>
            <value>
                <fullName>Receipt</fullName>
            </value>
            <value>
                <fullName>Penalty Demand Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>