force-app/main/default/objects/General_Settings__c/listViews/Agreement_Remainder_before_6_days.listView-meta.xml
<ListView>
    <fullName>Agreement_Remainder_before_6_days</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Project_Name1__c</columns>
    <columns>Block__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Agreement Remainder</value>
    </filters>
    <label>Agreement Remainder before 6 days</label>
</ListView>