force-app/main/default/objects/General_Settings__c/listViews/Cancellation_Mail_Template.listView-meta.xml
<ListView>
    <fullName>Cancellation_Mail_Template</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Project_Name1__c</columns>
    <columns>Block__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Cancellation Mail Template</value>
    </filters>
    <label>Cancellation Mail Template</label>
</ListView>