force-app/main/default/objects/General_Settings__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Project_Name1__c</columns>
    <columns>Block__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Demand Note,Demand_3RD_REMINDER,Demand_1ST_REMINDER,Demand_2ND_REMINDER,Revised Demand Note,Penalty Demand Note</value>
    </filters>
    <label>Demand Notes Templates</label>
</ListView>