force-app/main/default/objects/General_Settings__c/listViews/Project_Status_Report_Mail_Template.listView-meta.xml
<ListView>
    <fullName>Project_Status_Report_Mail_Template</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Project_Name1__c</columns>
    <columns>Block__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>PSR Mail Template</value>
    </filters>
    <label>Project Status Report Mail Template</label>
</ListView>