force-app/main/default/objects/General_Settings__c/listViews/Receipt_Templates.listView-meta.xml
<ListView>
    <fullName>Receipt_Templates</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Project_Name1__c</columns>
    <columns>Block__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Payment Receipt</value>
    </filters>
    <label>Receipt Templates</label>
</ListView>