force-app/main/default/objects/General_Settings__c/listViews/Terms_and_Conditions.listView-meta.xml
<ListView>
    <fullName>Terms_and_Conditions</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Project_Name1__c</columns>
    <columns>Block__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Terms and Conditions</value>
    </filters>
    <label>Terms and Conditions</label>
</ListView>