force-app/main/default/objects/General_Settings__c/listViews/Welcome_Mail_Templates.listView-meta.xml
<ListView>
    <fullName>Welcome_Mail_Templates</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Project_Name1__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Welcome Email Template</value>
    </filters>
    <label>Welcome Mail Templates</label>
</ListView>